Version 2009112301
+ POD & Kwalitee checks.

Version 2009102801
+ Remove execute bit from Makefile.PL

Version 2009102701
+ Added Changes & README files.
+ Modernized Makefile.PL.